--- a/style.css
+++ b/style.css
@@ -76,23 +76,23 @@ h4{
 	letter-spacing: 2;
 	word-spacing: 5;
 	font-weight: 200;
-	animation: fadeSlide 2s ease-in-out forwards,
-		letterspacing 2s ease-in-out forwards;
+	animation:transformy 2s ease-in-out forwards,
+		fadeSlide 2s ease-in-out forwards;
 }
 @keyframes fadeSlide {
     0% {
         opacity: 0;
     }
-    100% {
-        opacity: 1;
+    100%{
+    	opacity: 1;
     }
 }
-@keyframes letterspacing{
+@keyframes transformy{
 	0%{
-		letter-spacing: 2;
+		transform: translateY(10px);
 	}
 	100%{
-		letter-spacing: 4;
+		transform: translateY(0);
 	}
 }
 
@@ -116,7 +116,7 @@ h4{
 	transition: 0.5s ease-in-out;
 }
 .generate-btn{
-	width: 20%;
+	width: 30%;
 	padding: 1% 2%;
 	background-color: #27374D;
 	border-radius: 10px;
@@ -124,7 +124,7 @@ h4{
 }
 .generate-btn:hover{
 	cursor: pointer;
-	width: 25%;
+	width: 35%;
 	transition: 0.4s ease-in-out;
 	background-color: #526D82;
 }
@@ -145,6 +145,7 @@ h4{
 	background-color: #31363F;
 	padding: 2%;
 	border-radius: 10px;
+	height: 400px;
 }
 
 label{
